--- a/index.html
+++ b/index.html
@@ -24,12 +24,16 @@
           </div>
         </div>
       </div>
+    </div>
+    <div class="container-fluid">
       <div class="aboutUs">
         <div class="col-md-12">
         <h2>ABOUT US</h2>
           <p>When you work with us you are part of a team of committed collaborators.All aspects of our software development process are integrated,interactive<br> and agile.<br>Our approach unifies design,development and product management to create exceptional products.<br>We start each project by understanding your business goals, the user's needs and the product requirements.<br>Then we help translate them into effective and elegant solutions.</p>
-        </div
+        </div>
       </div>
+    </div>
+    <div class="container-fluid">
       <div class="services">
         <div class="col-md-12">
           <br>
@@ -39,10 +43,28 @@
           <p>Before we sign a contract or write a line of code our team spend the necessary time needed to understand your product vision.<br>The outcome pf this scoping session is proposal or high-level statement of work.<br>Based on your requirements, we can provide a complete offering or just the pieces you need.</p>
         </div>
       </div>
+    </div>
+    <div class="container-fluid">
+      <div class="row">
       <div class="whatWeDo">
         <div class="design">
           <div class="col-md-4">
-            <
+            <img src="images/design_icon.png" alt="This is an icon of the design section">
+          </div>
+        </div>
+        <div class="development">
+          <div class="col-md-4">
+            <img src="images/dev_icon.png" alt="This is an icon of the development section">
+          </div>
+        </div>
+        <div class="productManagement">
+          <div class="col-md-4">
+            <img src="images/product_icon.png" alt="This is an icon of the product management section">
+          </div>
+        </div>
+      </div>
+      </div>
+      </div>
 
 
 
