--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
     <title>Delani Studio</title>
   </head>
   <body>
-    <div class="intro">
-    <div class="container-fluid">
+    <div class="container-fluid intro">
       <div class="row">
         <div class="col-md-12">
           <div class="logo1">
@@ -25,16 +24,16 @@
         </div>
       </div>
     </div>
-    <div class="container-fluid">
-      <div class="aboutUs">
+    <div class="container-fluid aboutUs">
+      <div class="row aboutUs">
         <div class="col-md-12">
         <h2>ABOUT US</h2>
           <p>When you work with us you are part of a team of committed collaborators.All aspects of our software development process are integrated,interactive<br> and agile.<br>Our approach unifies design,development and product management to create exceptional products.<br>We start each project by understanding your business goals, the user's needs and the product requirements.<br>Then we help translate them into effective and elegant solutions.</p>
         </div>
       </div>
     </div>
-    <div class="container-fluid">
-      <div class="services">
+    <div class="container-fluid services">
+      <div class="row services">
         <div class="col-md-12">
           <br>
           <br>
@@ -44,9 +43,9 @@
         </div>
       </div>
     </div>
-    <div class="container-fluid">
-      <div class="row">
-      <div class="whatWeDo">
+    <div class="container-fluid whatWeDo">
+      <h2 class="whatWeDo">WHAT WE DO</h2>
+      <div class="row whatWeDo">
         <div class="design">
           <div class="col-md-4">
             <img src="images/design_icon.png" alt="This is an icon of the design section">
@@ -64,6 +63,38 @@
         </div>
       </div>
       </div>
+      <div class="container portfolio">
+        <h2 class="portfolio">PORTFOLIO</h2>
+        <div class="row first">
+          <div class="col-md-3">
+            <img src="images/work4.jpg" alt="This is image 1 of row 1 of the portfolio section">
+          </div>
+          <div class="col-md-3">
+            <img src="images/work3.jpg" alt="This is image 2 of row 1 of the portfolio section">
+          </div>
+          <div class="col-md-3">
+            <img src="images/work2.jpg" alt="This is image 3 of row 1 of the portfolio section">
+          </div>
+          <div class="col-md-3">
+            <img src="images/work1.jpg" alt="This is image 4 of row 1 of the portfolio section">
+          </div>
+        </div>
+          <div class="row second">
+            <div class="col-md-3">
+              <img src="images/work5.jpg" alt="This is image 1 of row 2 of the portfolio section">
+            </div>
+            <div class="col-md-3">
+              <img src="images/work6.jpg" alt="This is image 2 of row 2 of the portfolio section">
+            </div>
+            <div class="col-md-3">
+              <img src="images/work7.jpg" alt="This is image 3 of row 2 of the portfolio section">
+            </div>
+            <div class="col-md-3">
+              <img src="images/work8.jpg" alt="This is image 4 of row 2 of the portfolio section">
+            </div>
+          </div>
+        </div>
+
       </div>
 
 
