created a contact us section.

--- a/index.html
+++ b/index.html
@@ -94,12 +94,33 @@
             </div>
           </div>
         </div>
+        <div class="container-fluid contactUs">
+          <h2 class="contactUs">CONTACT US</h2>
+          <form>
+          <div class="row">
+            <div class="col-md-6">
+              <div class="form-group">
+                <label for="name">Name</label>
+                <input id="name" class="form-control" type="text">
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="form-group">
+                <label for="email">Email</label>
+                <input id="email" class="form-control" type="email">
+              </div>
+            </div>
+            <div class="col-md-12">
+              <label for="YourMessage">Your message</label>
+              <textarea id="YourMessage" placeholder="Your message" name="YourMessage"> 
+              </textarea>
+            <div>
 
-      </div>
 
 
+        </div>
 
-      </div>
+
 
   </body>
 </html>
