Add social media icons section.

--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
           <div class="logo1">
             <img src="images/logo.png" alt="This is the logo of delani studio">
           </div>
-          <h1>WELCOME</h1>
-          <h1>TO DELANI STUDIO</h1>
-          <p>AMAZING PEOPLE ARE MAKING DESIGNS IN A FUN ENVIRONMENT</p>
+          <h1 class="text-center">WELCOME<br>TO DELANI STUDIO</h1>
+          <p class="text-center">AMAZING PEOPLE ARE MAKING DESIGNS IN A FUN ENVIRONMENT</p>
           <div class="logo2">
             <img src="images/mouse_click.png" alt="This is an image of a logo of a keyboard mouse">
           </div>
@@ -112,15 +111,27 @@
             </div>
             <div class="col-md-12">
               <label for="YourMessage">Your message</label>
-              <textarea id="YourMessage" placeholder="Your message" name="YourMessage"> 
+              <textarea id="YourMessage" placeholder="Your message" name="YourMessage">
               </textarea>
-            <div>
-
-
-
+            </div>
+          </div>
+        </form>
         </div>
-
-
-
+        <footer>
+          <div class="socialMediaIcons">
+            <ul>
+              <li><img src="images/twitter.png" alt="This is an icon of the twitter logo"></li>
+              <li><img src="images/dribble.png" alt="This is an icon of the dribble logo"></li>
+              <li><img src="images/facebook.png" alt="This is an icon of the facebook logo"></li>
+              <li><img src="images/g_plus.png" alt="This is an icon of the google plus logo"></li>
+              <li><img src="images/skype.png" alt="This is an icon of the skype logo"></li>
+              <li><img src="images/stumble_upon.png" alt="This is an icon of the stumble upon logo"></li>
+              <li><img src="images/behance.png" alt="This is an icon of the behance logo"></li>
+              <li><img src="images/pinterest.png" alt="This is an icon of the pinterest logo"></li>
+              <li><img src="images/flickr.png" alt="This is an icon of the flickr logo"></li>
+            </ul>
+          <p>DELANI STUDIO<br>2019</p>
+        </div>
+      </footer>
   </body>
 </html>
