--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     <div class="container-fluid aboutUs">
       <div class="row aboutUs">
         <div class="col-md-12">
-        <h2>ABOUT US</h2>
-          <p>When you work with us you are part of a team of committed collaborators.All aspects of our software development process are integrated,interactive<br> and agile.<br>Our approach unifies design,development and product management to create exceptional products.<br>We start each project by understanding your business goals, the user's needs and the product requirements.<br>Then we help translate them into effective and elegant solutions.</p>
+        <h2 class="text-center">ABOUT US</h2>
+          <p class="text-center">When you work with us you are part of a team of committed collaborators.All aspects of our software development process are integrated,interactive<br> and agile.<br>Our approach unifies design,development and product management to create exceptional products.<br>We start each project by understanding your business goals, the user's needs and the product requirements.<br>Then we help translate them into effective and elegant solutions.</p>
         </div>
       </div>
     </div>
@@ -37,13 +37,13 @@
           <br>
           <br>
           <br>
-          <h2>SERVICES</h2>
-          <p>Before we sign a contract or write a line of code our team spend the necessary time needed to understand your product vision.<br>The outcome pf this scoping session is proposal or high-level statement of work.<br>Based on your requirements, we can provide a complete offering or just the pieces you need.</p>
+          <h2 class="text-center">SERVICES</h2>
+          <p class=text-center>Before we sign a contract or write a line of code our team spend the necessary time needed to understand your product vision.<br>The outcome pf this scoping session is proposal or high-level statement of work.<br>Based on your requirements, we can provide a complete offering or just the pieces you need.</p>
         </div>
       </div>
     </div>
     <div class="container-fluid whatWeDo">
-      <h2 class="whatWeDo">WHAT WE DO</h2>
+      <h2 class="text-center">WHAT WE DO</h2>
       <div class="row whatWeDo">
         <div class="design">
           <div class="col-md-4">
@@ -63,7 +63,7 @@
       </div>
       </div>
       <div class="container portfolio">
-        <h2 class="portfolio">PORTFOLIO</h2>
+        <h2 class="text-center">PORTFOLIO</h2>
         <div class="row first">
           <div class="col-md-3">
             <img src="images/work4.jpg" alt="This is image 1 of row 1 of the portfolio section">
@@ -94,7 +94,7 @@
           </div>
         </div>
         <div class="container-fluid contactUs">
-          <h2 class="contactUs">CONTACT US</h2>
+          <h2 class="text-center">CONTACT US</h2>
           <form>
           <div class="row">
             <div class="col-md-6">
@@ -130,7 +130,7 @@
               <li><img src="images/pinterest.png" alt="This is an icon of the pinterest logo"></li>
               <li><img src="images/flickr.png" alt="This is an icon of the flickr logo"></li>
             </ul>
-          <p>DELANI STUDIO<br>2019</p>
+          <p class="text-center">DELANI STUDIO<br>2019</p>
         </div>
       </footer>
   </body>
