Change the alignment of the logos to center

--- a/index.html
+++ b/index.html
@@ -44,23 +44,17 @@
     </div>
     <div class="container-fluid whatWeDo">
       <h2 class="text-center">WHAT WE DO</h2>
-      <div class="row whatWeDo">
-        <div class="design">
-          <div class="col-md-4">
+      <div class="row ">
+          <div class="col-md-4" id="design">
             <img src="images/design_icon.png" alt="This is an icon of the design section">
           </div>
-        </div>
-        <div class="development">
-          <div class="col-md-4">
+          <div class="col-md-4" id="development">
             <img src="images/dev_icon.png" alt="This is an icon of the development section">
           </div>
-        </div>
-        <div class="productManagement">
-          <div class="col-md-4">
+          <div class="col-md-4" id="productManagement">
             <img src="images/product_icon.png" alt="This is an icon of the product management section">
           </div>
         </div>
-      </div>
       </div>
       <div class="container portfolio">
         <h2 class="text-center">PORTFOLIO</h2>
@@ -119,17 +113,15 @@
         </div>
         <footer>
           <div class="socialMediaIcons">
-            <ul>
-              <li><img src="images/twitter.png" alt="This is an icon of the twitter logo"></li>
-              <li><img src="images/dribble.png" alt="This is an icon of the dribble logo"></li>
-              <li><img src="images/facebook.png" alt="This is an icon of the facebook logo"></li>
-              <li><img src="images/g_plus.png" alt="This is an icon of the google plus logo"></li>
-              <li><img src="images/skype.png" alt="This is an icon of the skype logo"></li>
-              <li><img src="images/stumble_upon.png" alt="This is an icon of the stumble upon logo"></li>
-              <li><img src="images/behance.png" alt="This is an icon of the behance logo"></li>
-              <li><img src="images/pinterest.png" alt="This is an icon of the pinterest logo"></li>
-              <li><img src="images/flickr.png" alt="This is an icon of the flickr logo"></li>
-            </ul>
+              <img src="images/twitter.png" alt="This is an icon of the twitter logo">
+              <img src="images/dribble.png" alt="This is an icon of the dribble logo">
+              <img src="images/facebook.png" alt="This is an icon of the facebook logo">
+              <img src="images/g_plus.png" alt="This is an icon of the google plus logo">
+              <img src="images/skype.png" alt="This is an icon of the skype logo">
+              <img src="images/stumble_upon.png" alt="This is an icon of the stumble upon logo">
+              <img src="images/behance.png" alt="This is an icon of the behance logo">
+              <img src="images/pinterest.png" alt="This is an icon of the pinterest logo">
+              <img src="images/flickr.png" alt="This is an icon of the flickr logo">
           <p class="text-center">DELANI STUDIO<br>2019</p>
         </div>
       </footer>
