--- a/index.html
+++ b/index.html
@@ -51,30 +51,30 @@
       <div class="row ">
           <div class="col-md-4" id="design">
             <div class="design-hide">
-            <img src="images/design_icon.png" alt="This is an icon of the design section" class="clickable">
+            <img src="images/design_icon.png" alt="This is an icon of the design section" class="clickable1">
             </div>
             <div class="design-show">
               <h3 class="text-center">DESIGN</h3>
-            <p class=text-center>Our design practice offers a full range of services<br> including brand strategy, interaction and visual design<br> and user experience.<br><br>Throughout your project,our designers create and <br> implement visual design and workflows,solicit user<br>feedback and work with you to make sure what gets built<br>is what is needed.</p>
+            <p class=text-center><span class="clickable1">Our design practice offers a full range of services<br> including brand strategy, interaction and visual design<br> and user experience.<br><br>Throughout your project,our designers create and <br> implement visual design and workflows,solicit user<br>feedback and work with you to make sure what gets built<br>is what is needed.</span></p>
             </div>
           </div>
           <div class="col-md-4" id="development">
             <div class="development-hide">
-            <img src="images/dev_icon.png" alt="This is an icon of the development section" class="clickable">
+            <img src="images/dev_icon.png" alt="This is an icon of the development section" class="clickable2">
           </div>
           <div class="development-show">
             <h3 class=text-center>DEVELOPMENT</h3>
-            <p class=text-center>All engineers are fluent in the latest enterprise,mobile<br>and web development technologies.<br><br>They collaborate with your team to write, and improve<br>code on a daily basis,using proven practices such as</br>test-driven development and pair programming.</p>
+            <p class=text-center><span class="clickable2">All engineers are fluent in the latest enterprise,mobile<br>and web development technologies.<br><br>They collaborate with your team to write, and improve<br>code on a daily basis,using proven practices such as</br>test-driven development and pair programming.</span></p>
             </div>
             </div>
           <div class="col-md-4" id="productManagement">
             <div class="productManagement-hide">
-            <img src="images/product_icon.png" alt="This is an icon of the product management section" class="clickable">
+            <img src="images/product_icon.png" alt="This is an icon of the product management section" class="clickable3">
           </div>
           <div class="productManagement-show">
             <h3
         <h3 class="text-center">PRODUCT MANAGEMENT</h3>
-        <p class="text-center">Planning and development is iterative.Because we are<br>constantly coding anf testing,the products we build are<br>always ready to go live<br><br>The iterative process allows for changes as business<br>requirements evolve.<br>
+        <p class="text-center"><span class="clickable3">Planning and development is iterative.Because we are<br>constantly coding anf testing,the products we build are<br>always ready to go live<br><br>The iterative process allows for changes as business<br>requirements evolve.<br></span></p>
       </div>
       </div>
       <br>
