--- a/index.html
+++ b/index.html
@@ -51,7 +51,10 @@
       <div class="row ">
           <div class="col-md-4" id="design">
             <div class="design-hide">
+              <figure>
             <img src="images/design_icon.png" alt="This is an icon of the design section" class="clickable1">
+            <figcaption>DESIGN</figcaption>
+            </figure>
             </div>
             <div class="design-show">
               <h3 class="text-center">DESIGN</h3>
@@ -60,7 +63,10 @@
           </div>
           <div class="col-md-4" id="development">
             <div class="development-hide">
+              <figure>
             <img src="images/dev_icon.png" alt="This is an icon of the development section" class="clickable2">
+            <figcaption>DEVELOPMENT</figcaption>
+            </figure>
           </div>
           <div class="development-show">
             <h3 class=text-center>DEVELOPMENT</h3>
@@ -69,8 +75,12 @@
             </div>
           <div class="col-md-4" id="productManagement">
             <div class="productManagement-hide">
+              <figure>
             <img src="images/product_icon.png" alt="This is an icon of the product management section" class="clickable3">
+            <figcaption>PRODUCT MANAGEMENT</figcaption>
+            </figure>
           </div>
+
           <div class="productManagement-show">
             <h3
         <h3 class="text-center">PRODUCT MANAGEMENT</h3>
