--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
           <div class="logo1">
             <img src="images/logo.png" alt="This is the logo of delani studio">
           </div>
+          <div class="intro-paragragh">
           <h1 class="text-center">WELCOME<br>TO DELANI STUDIO</h1>
           <p class="text-center">AMAZING PEOPLE ARE MAKING DESIGNS IN A FUN ENVIRONMENT</p>
+          </div>
           <div class="logo2">
             <img src="images/mouse_click.png" alt="This is an image of a logo of a keyboard mouse">
           </div>
@@ -27,20 +29,23 @@
     <div class="container-fluid aboutUs">
       <div class="row aboutUs">
         <div class="col-md-12">
+          <div class="about-us-text">
         <h2 class="text-center">ABOUT US</h2>
           <p class="text-center">When you work with us you are part of a team of committed collaborators.All aspects of our software development process are integrated,interactive<br> and agile.<br>Our approach unifies design,development and product management to create exceptional products.<br>We start each project by understanding your business goals, the user's needs and the product requirements.<br>Then we help translate them into effective and elegant solutions.</p>
+          </div>
         </div>
       </div>
     </div>
-    <br>
     <div class="container-fluid services">
       <div class="row services">
         <div class="col-md-12">
           <br>
           <br>
           <br>
+          <div class="services-text">
           <h2 class="text-center">SERVICES</h2>
           <p class=text-center>Before we sign a contract or write a line of code our team spend the necessary time needed to understand your product vision.<br>The outcome pf this scoping session is proposal or high-level statement of work.<br>Based on your requirements, we can provide a complete offering or just the pieces you need.</p>
+          </div>
         </div>
       </div>
     </div>
@@ -129,25 +134,21 @@
           <div class="row">
             <div class="col-md-6">
               <div class="form-group">
-                <label for="name">Name</label>
-                <input id="name" class="form-control" type="text">
+                <input id="name" placeholder="Name" class="form-control" type="text">
               </div>
             </div>
             <div class="col-md-6">
               <div class="form-group">
-                <label for="email">Email</label>
-                <input id="email" class="form-control" type="email">
+                <input id="email" placeholder="Email" class="form-control" type="email">
               </div>
             </div>
             <div class="col-md-12">
-              <label for="YourMessage">Your message</label>
-              <textarea id="YourMessage" placeholder="Your message" name="YourMessage" rows="5" cols="20">
+              <textarea id="YourMessage" placeholder="Your message" name="YourMessage" rows="15" cols="100">
               </textarea>
             </div>
           </div>
         </form>
         </div>
-        <footer>
           <div class="socialMediaIcons">
               <img src="images/twitter.png" alt="This is an icon of the twitter logo">
               <img src="images/dribble.png" alt="This is an icon of the dribble logo">
@@ -160,6 +161,5 @@
               <img src="images/flickr.png" alt="This is an icon of the flickr logo">
           <p class="text-center">DELANI STUDIO<br>2019</p>
         </div>
-      </footer>
-  </body>
+        </body>
 </html>
