change the portfolio layout

--- a/index.html
+++ b/index.html
@@ -98,31 +98,31 @@
         <br>
         <div class="row first">
           <div class="column">
-            <img src="images/work4.jpg" alt="This is image 1 of row 1 of the portfolio section">
+            <img src="images/work4.jpg" alt="This is image 1 of row 1 of the portfolio section" style="width:100%">
           </div>
           <div class="column">
-            <img src="images/work3.jpg" alt="This is image 2 of row 1 of the portfolio section">
+            <img src="images/work3.jpg" alt="This is image 2 of row 1 of the portfolio section" style="width:100%">
           </div>
           <div class="column">
-            <img src="images/work2.jpg" alt="This is image 3 of row 1 of the portfolio section">
+            <img src="images/work2.jpg" alt="This is image 3 of row 1 of the portfolio section" style="width:100%">
           </div>
           <div class="column">
-            <img src="images/work1.jpg" alt="This is image 4 of row 1 of the portfolio section">
+            <img src="images/work1.jpg" alt="This is image 4 of row 1 of the portfolio section" style="width:100%">
         </div>
         </div>
         <br>
           <div class="row seconds">
             <div class="column">
-              <img src="images/work5.jpg" alt="This is image 1 of row 2 of the portfolio section">
+              <img src="images/work5.jpg" alt="This is image 1 of row 2 of the portfolio section" style="width:100%">
             </div>
             <div class="column">
-              <img src="images/work6.jpg" alt="This is image 2 of row 2 of the portfolio section">
+              <img src="images/work6.jpg" alt="This is image 2 of row 2 of the portfolio section" style="width:100%">
             </div>
             <div class="column">
-              <img src="images/work7.jpg" alt="This is image 3 of row 2 of the portfolio section">
+              <img src="images/work7.jpg" alt="This is image 3 of row 2 of the portfolio section" style="width:100%">
             </div>
             <div class="column">
-              <img src="images/work8.jpg" alt="This is image 4 of row 2 of the portfolio section">
+              <img src="images/work8.jpg" alt="This is image 4 of row 2 of the portfolio section" style="width:100%">
             </div>
           </div>
           <br>
