change footer alignment to center.

--- a/index.html
+++ b/index.html
@@ -149,8 +149,9 @@
           </div>
         </form>
         </div>
+        <footer>
           <div class="socialMediaIcons">
-              <img src="images/twitter.png" alt="This is an icon of the twitter logo">
+              <img src="images/twitter.png" alt="This is an icon of the twitter logo" >
               <img src="images/dribble.png" alt="This is an icon of the dribble logo">
               <img src="images/facebook.png" alt="This is an icon of the facebook logo">
               <img src="images/g_plus.png" alt="This is an icon of the google plus logo">
@@ -161,5 +162,6 @@
               <img src="images/flickr.png" alt="This is an icon of the flickr logo">
           <p class="text-center">DELANI STUDIO<br>2019</p>
         </div>
+        </footer>
         </body>
 </html>
