add and  style a button in the form.

--- a/index.html
+++ b/index.html
@@ -144,6 +144,8 @@
             </div>
               <textarea id="YourMessage" placeholder="Your message" name="YourMessage" rows="15" cols="100">
               </textarea>
+              <button  type="submit" class="button " onclick="output()">Submit Message</button>
+
 
           </div>
         </form>
