add mail chimp script tag to the html form

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/4147eac08c5bd19ed6530297b/6842030ce97b86c27307a6253.js");</script>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Raleway&display.min.css">
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
@@ -132,7 +133,7 @@
         <br>
         <div class="container-fluid contactUs">
           <h2 class="text-center">CONTACT US</h2>
-          <form id="contacts">
+          <form id="contacts" >
           <div class="row">
             <div class="col-md-6">
               <div class="form-group">
