change font of body.

--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
   <head>
     <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/4147eac08c5bd19ed6530297b/6842030ce97b86c27307a6253.js");</script>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Raleway&display.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&display=swap" rel="stylesheet">
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
     <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
     <script src="js/scripts.js"></script>
     <meta charset="utf-8">
+    <meta name="viewreport" content="width=device-width, initial-scale=1.0">
     <title>Delani Studio</title>
   </head>
   <body>
@@ -138,16 +139,17 @@
             <div class="col-md-6">
               <div class="form-group">
                 <input id="name" placeholder="Name" class="form-control" type="text" required>
+                <span id="text"></span>
               </div>
             </div>
             <div class="col-md-6">
               <div class="form-group">
-                <input id="email" placeholder="Email" class="form-control" type="email" required>
+                <input id="email" placeholder="Email" class="form-control" type="email"  required>
               </div>
             </div>
               <textarea id="YourMessage" placeholder="Your message" name="YourMessage" rows="15" cols="100" required>
               </textarea>
-              <button  type="submit" class="button " onclick="output()">Submit Message</button>
+              <button  type="submit" class="button " onclick="function()">Submit Message</button>
 
 
           </div>
