--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
       </div>
     </div>
   </div>
+  </div>
   <br>
   <div class="container whatWeDo">
     <h2 class="text-center">WHAT WE DO</h2>
