add a div closing tag to the what we do section in the index.html file.

--- a/index.html
+++ b/index.html
@@ -95,6 +95,9 @@
           <p class="text-center"><span class="clickable3">Planning and development is iterative.Because we are<br>constantly coding anf testing,the products we build are<br>always ready to go live<br><br>The iterative process allows for changes as business<br>requirements evolve.<br></span></p>
         </div>
       </div>
+    </div>
+  </div>
+
       <br>
       <div class="container portfolio">
         <h2 class="text-center">PORTFOLIO</h2>
