add links to the social media icons in the footer.

--- a/index.html
+++ b/index.html
@@ -97,7 +97,6 @@
       </div>
     </div>
   </div>
-
       <br>
       <div class="container portfolio">
         <h2 class="text-center">PORTFOLIO</h2>
@@ -159,15 +158,15 @@
       </div>
       <footer>
         <div class="socialMediaIcons">
-          <img src="images/twitter.png" alt="This is an icon of the twitter logo" >
-          <img src="images/dribble.png" alt="This is an icon of the dribble logo">
-          <img src="images/facebook.png" alt="This is an icon of the facebook logo">
-          <img src="images/g_plus.png" alt="This is an icon of the google plus logo">
-          <img src="images/skype.png" alt="This is an icon of the skype logo">
-          <img src="images/stumble_upon.png" alt="This is an icon of the stumble upon logo">
-          <img src="images/behance.png" alt="This is an icon of the behance logo">
-          <img src="images/pinterest.png" alt="This is an icon of the pinterest logo">
-          <img src="images/flickr.png" alt="This is an icon of the flickr logo">
+          <a href="https://twitter.com/"><img src="images/twitter.png" alt="This is an icon of the twitter logo" ></a>
+          <a href="https://dribbble.com/"><img src="images/dribble.png" alt="This is an icon of the dribble logo"></a>
+          <a href="https://www.facebook.com/"><img src="images/facebook.png" alt="This is an icon of the facebook logo"></a>
+          <a href="https://www.google.com/"><img src="images/g_plus.png" alt="This is an icon of the google plus logo"></a>
+          <a href="https://www.skype.com/en/"><img src="images/skype.png" alt="This is an icon of the skype logo"></a>
+          <a href="https://www.stumbleupon.com/"><img src="images/stumble_upon.png" alt="This is an icon of the stumble upon logo"></a>
+          <a href="https://www.behance.net/"><img src="images/behance.png" alt="This is an icon of the behance logo"></a>
+          <a href="https://www.pinterest.com/>"><img src="images/pinterest.png" alt="This is an icon of the pinterest logo"></a>
+          <a href="https://www.flickr.com/"><img src="images/flickr.png" alt="This is an icon of the flickr logo"></a>
           <p class="text-center">DELANI STUDIO<br>2019</p>
         </div>
       </footer>
